# GraphSSL

./: .gitattributes  .gitignore  EXPERIMENTS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_HPC.md  Self-supervised pre-training + Linear probe + end-to-end fine-tuning  TODO.txt  analyze_results.py  main.py  pyproject.toml  requirements.txt
data/embeddings/: pos_embedding.pt
scripts/: ExploratoryAnalysis.ipynb  GraphSAGE_Yu.ipynb  GraphSSLGabriel.ipynb  PlayGround.ipynb  Results.ipynb  generate_metapath2vec.sh  graphssl_demonstration.ipynb  graphssl_demonstration_downstream.ipynb  notes.py  run_downstream_examples.sh  run_examples.sh  run_examples_small.sh  run_examples_small_downstream.sh  run_experiment.sh  run_hpc.sh  run_project_experiments.sh
scripts/hpc/: EXPERIMENTS_MANIFEST.md  README.sh  activate.sh  exp1_supervised_node.sh  exp2_supervised_link.sh  exp5_graphmae_node.sh  exp8_combined_loss_edge.sh  exp_ssl_edge.sh  exp_ssl_node_mse.sh  exp_ssl_node_sce.sh  exp_ssl_pfp.sh  exp_ssl_tar.sh  exp_ssl_tarpfp.sh  exp_supervised_link.sh  exp_supervised_node.sh  hpc_run.sh  hpc_run_downstream.sh  hpc_run_downstream_test.sh  hpc_run_sl_edge.sh  hpc_run_sl_node.sh  hpc_run_ssl_edge.sh  hpc_run_ssl_node.sh  run_hpc.sh  set_env.sh  submit_all_downstream.sh  submit_all_experiments.sh
scripts/test/: README.md  list_tests.sh  quick_test.sh  quick_test_1.sh  quick_validation.py  run_all_tests.sh  run_downstream_test.sh  run_quick_tests.sh  run_test.sh  run_tests_background.sh  test_exp1_supervised_node.sh  test_exp2_supervised_link.sh  test_exp5_graphmae.sh  test_exp8_combined_loss.sh
src/: GraphSSL.py  README.md  dataset_to_inductive.py  main.py  run_examples.sh  run_hpc.sh  test.py  test_pipeline.py
src/graphsage/: data_mag.py  train_node_supervised.py  utils.py
src/graphssl/: README.md  __init__.py  classifier_MLP.py  (+13 more)
tests/: README.md  test_downstream.py  test_link_utils.py  test_loss_functions.py  test_objectives.py  test_pipeline.py
(+24 files in other folders)
