[project]
name = "graphssl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.1.1",
    "debugpy>=1.8.17",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "numpy>=2.0,<2.4",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torch-geometric",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]
