[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphssl"
version = "0.1.0"
description = "Self-supervised Graph Representation Learning - DTU Deep Learning Project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Gabriel Agerholm Ruge"},
]
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "pyg-lib",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
    "torch-geometric>=2.6.1",
    "pyyaml>=6.0.2",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "wandb",
    "pandas>=2.3.0",
    "ogb>=1.3.6",
    "mpl-tools",
    "seaborn",
    "scikit-learn",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]
notebook = [
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]

[project.scripts]
graphssl = "graphssl.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphssl*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

